--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>front-end</title>
+    <script src="./static/ol.js"></script>
+    <script src="./static/proj4.js"></script>
+    <script src="./static/jquery.min.js"></script>
+    <script src="./static/ol-contextmenu.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-    <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
+    <link rel="stylesheet" href="./static/materialdesignicons.min.css">
+    <link rel="stylesheet" href="./static/ol.css" type="text/css">
+    <!--<script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>-->
     <!--<script type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?version=2.0&apiKey=D01A2D82-B1E6-3340-84D4-462002F06506"></script>-->
-    <link href="https://unpkg.com/ol-contextmenu/dist/ol-contextmenu.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/ol-contextmenu"></script>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but front-end doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <link href="./static/ol-contextmenu.min.css" rel="stylesheet">
+</head>
+<body>
+<noscript>
+    <strong>We're sorry but front-end doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+</noscript>
+<div id="app"></div>
+</body>
 </html>
